# enflow

./: README  README.md  __main__.py  check_quant.py  check_reversible.py  dataset_test.py  dynamics.py  gen_samples.py  main.py  make_lj.py  pyproject.toml  requirements.txt  train.py  train_ddp.py
alchemist/: alchemist.py  asedb.py  config.py  dynamic.py  gen_nn.py  main.py
alchemist/data/: coords.py  lj.py  md.py  sdf.py  simulated.py  trr.py
alchemist/flow/: base.py  dynamics.py  loss.py
alchemist/nn/: argmax.py  egcl.py
alchemist/utils/: conversion.py  helpers.py
enflow/: main.py  model.py  model_.py  train.py
enflow/data/: base.py  compose.py  hdf5.py  lig.py  lj.py  md.py  qm9.py  sdf.py  simulated.py  transforms.py
enflow/flow/: base.py  dynamics.py
enflow/nn/: egcl.py  floor.py  model.py
enflow/units/: constants.py  conversion.py
enflow/utils/: conversion.py  helpers.py
example/: generate.yaml  lj.yaml  train.yaml
