[project]
name = "Alchemist"
version = "0.2.0"
description = ""
authors = [{name="Bharath Raghavan", email="anonymous@author.com"},
           {name="David M. Rogers", email="predictivestatmech@gmail.com"}]
license = "BSD-3-Clause"
readme = "README.md"

requires-python = ">=3.9,<4.0"
dependencies = [
  "typer",
  "tqdm",
  #"openff",
  "openmm",
  "numpy",
  "pyyaml",
  "pydantic",
  "torch>=2.0",
]

[project.scripts]
alchemist = "alchemist.alchemist:app"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
